# employee_admin_project

./: .gitignore  brief.md  main.py  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: ef15db8d1547_initial_tables.py
core/: configuration.py  db.py  dependencies.py  security.py
handlers/: admin_handler.py  asset_handler.py  auth_handler.py  request_handler.py
mappers/: asset_mapper.py  request_mapper.py  user_mapper.py
models/: asset_request.py  asset_type.py  user.py
routers/: admin_router.py  asset_type_router.py  auth_router.py  request_router.py
schema/: asset_schema.py  auth_schema.py  request_schema.py
services/: admin_service.py  asset_service.py  auth_service.py  request_service.py
